--- a/build
+++ b/build
@@ -46,7 +46,7 @@ trap - ERR
 trap error_handler ERR
 (cd "${PROJECT_HOME}/python/wwa_app_example" && python3 -m setup sdist)
 (cd "${PROJECT_HOME}/python/wwa_app_example" && python3 -m setup bdist)
-(cd "${PROJECT_HOME}/python/wwa_app_example" && python3 -m virtualenv env && source env/bin/activate && python3 -m setup install && wwa_devops && deactivate)
+(cd "${PROJECT_HOME}/python/wwa_app_example" && python3 -m virtualenv -p python3 env && source env/bin/activate && python3 -m setup install && wwa_devops && deactivate)
 PYTHON_APP_VERSION=$(cd "${PROJECT_HOME}/python/wwa_app_example" && cat version.txt)
 
 (cd "${WORKING}" && git clone https://github.com/jpmsilva/packer-templates.git)
